# ploneapi-shell

./: .gitignore  CHANGELOG.md  CODE_SIGNING.md  LICENSE  PLONE_REST_API_NOTES.md  PYPI_DISTRIBUTION.md  README.md  TOOL_EXPLANATION.md  build_app.sh  fix_metadata.py  ploneapi_shell.spec  pyproject.toml  requirements-packaging.txt  requirements.txt  setup.py
media/: plone-logo.icns
ploneapi_shell/: __init__.py  api.py  cli.py  server.py  streamlit_launcher.py  web.py
ui/: README.md  bun.lockb  package.json  svelte.config.js  test-server.sh  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: api.rs  lib.rs  server.rs
ui/src/routes/: +page.svelte  +page.ts
