[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ploneapi-shell"
version = "0.1.8"
description = "Interactive shell and CLI for exploring Plone REST API sites"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "David Bain", email = "david.bain@incrementic.com"}
]
keywords = ["plone", "api", "rest", "cli", "shell", "explorer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "prompt-toolkit>=3.0.48",
    "streamlit>=1.28.0",
    "thefuzz>=0.19.0",
]

[project.scripts]
ploneapi-shell = "ploneapi_shell.cli:APP"

[project.urls]
Homepage = "https://github.com/pigeonflight/ploneapi-shell"
Documentation = "https://github.com/pigeonflight/ploneapi-shell#readme"
Repository = "https://github.com/pigeonflight/ploneapi-shell"
Issues = "https://github.com/pigeonflight/ploneapi-shell/issues"

[tool.setuptools]
packages = ["ploneapi_shell"]

[tool.setuptools.package-data]
ploneapi_shell = []

